# Parser2GIS

./: .editorconfig  .gitignore  =6.0  AI_README.md  ENGINEERING_CONSTITUTION.md  README.md  backlog.md  code_review_bundle.txt  parser2gis.spec  pyproject.toml
.github/workflows/: build-windows.yml
docs/: smoke-test-windows-report.md  user_manual.md
engineering/: AGENT_PLAYBOOK.md  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  CONSTITUTION.md  TASK_TEMPLATE.md
infrastructure/: DEVELOPER_WORKSTATION.md  MACHINE_HISTORY.md  RELEASE.md
parser2gis/: __init__.py  __main__.py  workspace.py
parser2gis/app_gui/: __init__.py  main_window.py
parser2gis/app_gui/controllers/: app_controller.py
parser2gis/app_gui/dialogs/: city_rubric_dialog.py  export_dialog.py  settings_dialog.py  task_name_dialog.py  update_directory_dialog.py
parser2gis/app_gui/models/: task_table_model.py
parser2gis/app_gui/widgets/: progress_delegate.py
parser2gis/assets/: parser2gis.manifest  parser2gis.rc  version.rc
parser2gis/chatgpt_export/: __init__.py  cli.py  console_export.js  markdown.py  parser.py
parser2gis/domain/: __init__.py  models.py
parser2gis/exporter/: __init__.py  base.py  csv_exporter.py  json_exporter.py  xlsx_exporter.py
parser2gis/logging/: __init__.py  app_logger.py  error_logger.py  export_logger.py  log_rotation.py  task_logger.py
parser2gis/parser/: __init__.py  address_normalizer.py  deduplicator.py  organization_parser.py  phone_extractor.py
parser2gis/services/: __init__.py  city_service.py  directory_update_service.py  export_service.py  organization_service.py  rubric_service.py  task_service.py
parser2gis/settings/: __init__.py  settings.py
parser2gis/source_2gis/: __init__.py  city_resolver.py  http_client.py  org_fetcher.py  rubric_resolver.py
parser2gis/storage/: __init__.py  cache.py  connection.py  migration.py
parser2gis/storage/repositories/: __init__.py  base.py  city_repo.py  contact_repo.py  export_repo.py  organization_repo.py  parse_log_repo.py  rubric_repo.py  seed.py  task_repo.py
parser2gis/task_manager/: __init__.py  manager.py  models.py  queue.py  recovery.py
scripts/: build.py  generate_icon.py  package_release.py
tests/: test_chatgpt_export.py  test_directory_update.py  test_execution_pipeline.py  test_logging.py  test_settings.py  test_storage.py
