[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parser2gis"
version = "0.1.0"
description = "Desktop application for collecting and exporting organization data from 2GIS city directories"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "IvaStas" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
]
dependencies = [
    "PySide6>=6.6",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/IvaStas/parser2gis"
BugTracker = "https://github.com/IvaStas/parser2gis/issues"

[project.scripts]
parser2gis = "parser2gis.__main__:main"
chatgpt-export = "parser2gis.chatgpt_export.cli:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
include = ["parser2gis*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.js", "*.ico", "*.png", "*.svg", "*.rc", "*.manifest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
